--- a/index.html
+++ b/index.html
@@ -4,6 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+      .m {
+        width: 35em;
+        background-color: #0d1117;
+        color: #c9d1d9;
+        margin: 0 auto;
+        font-family: Tahoma, Verdana, Arial, sans-serif;
+      }
+      #noeffort {
+        background-color: aqua;
+      }
+      #notfat {
+        width: 35em;
+        align-content: center;
+      }
+    </style>
     <!-- STEP 1: Change the title tag to be Your Name -->
     <title>Josue Q.</title>
 
@@ -29,26 +45,55 @@
         </div>
       </nav>
 
-    <div>
+    <div class="m">
       <!-- Add a class with custom styling to this div -->
     </div>
 
-    <div>
+    <div class="m" id="noeffort">
       <!-- Add the same class as before to apply the same styling to this div.
            ALSO add an id to this div to apply something unique. -->
+
+      <!-- There's nothing in the div, what's the point of styling it?-->
     </div>
 
     <!-- STEP 4: CREATE A PHOTO CAROUSEL HERE -->
+<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="https://images.unsplash.com/photo-1523626752472-b55a628f1acc?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=2e90eae0238ba64cc447f3be7f522c19&auto=format&fit=crop&w=1575&q=80" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://images.unsplash.com/photo-1517519014922-8fc06b814a0e?ixlib=rb-0.3.5&s=612f05d638cc31fd235cbfb2d21bcfc0&auto=format&fit=crop&w=1352&q=80" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://images.unsplash.com/photo-1517849845537-4d257902454a?ixlib=rb-0.3.5&s=b40cfb86768850f7623bfcfef2a5ba0f&auto=format&fit=crop&w=1575&q=80" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://images.unsplash.com/photo-1518020382113-a7e8fc38eac9?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=71d59cd22de21da8d2939bc203617983&auto=format&fit=crop&w=1560&q=80" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://images.unsplash.com/photo-1518020382113-a7e8fc38eac9?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=71d59cd22de21da8d2939bc203617983&auto=format&fit=crop&w=1560&q=80" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://images.unsplash.com/photo-1517423738875-5ce310acd3da?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=b1523dbf0339fcfcadbe96fe4eb2f8b2&auto=format&fit=crop&w=1410&q=80" class="d-block w-100" alt="...">
+    </div>
+  </div>
+</div>
 
     <!-- STEP 5: ADD Bootstrap styling to the table below so it has striped rows 
          and a header row and add at least three more rows. Feel free to change the text.-->
 
-    <table>
-      <th>
-        <td>A Person's Name</td><td>Their Fav Animal that starts with the first letter of their first name</td><td># of toes that animal has</td>
-      </th>
+    <table  id="notfat" class="table table-striped">
+       <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">A person's name</th>
+          <th scope="col">Their favorite animal that starts with the first letter of their first name</th>
+          <th scope="col"># of toes that animal has</th>
+        </tr>
+      </thead>
       <tr>
-        <td>asd</td><td>qwerty</td><td>opiuy</td>
+        <td>1</td><td>asd</td><td>qwerty</td><td>opiuy</td>
       </tr>
     </table>
 
