--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
       }
       #notfat {
         width: 35em;
-        align-content: center;
+        margin-left: auto;
+        margin-right: 5%;
+        margin-top: 5%;
+        margin-bottom: 5%;
       }
     </style>
     <!-- STEP 1: Change the title tag to be Your Name -->
@@ -83,19 +86,30 @@
     <!-- STEP 5: ADD Bootstrap styling to the table below so it has striped rows 
          and a header row and add at least three more rows. Feel free to change the text.-->
 
-    <table  id="notfat" class="table table-striped">
+    <table id="notfat" class="table table-striped">
        <thead>
         <tr>
           <th scope="col">#</th>
-          <th scope="col">A person's name</th>
-          <th scope="col">Their favorite animal that starts with the first letter of their first name</th>
-          <th scope="col"># of toes that animal has</th>
+          <th scope="col">A</th>
+          <th scope="col">B</th>
+          <th scope="col">C</th>
         </tr>
       </thead>
       <tr>
         <td>1</td><td>asd</td><td>qwerty</td><td>opiuy</td>
       </tr>
+      <tr>
+        <td>2</td><td>asd</td><td>qwerty</td><td>opiuy</td>
+      </tr>
+      <tr>
+        <td>3</td><td>asd</td><td>qwerty</td><td>opiuy</td>
+      </tr>
+      <tr>
+        <td>4</td><td>asd</td><td>qwerty</td><td>opiuy</td>
+      </tr>
+      <tr>
+        <td>5</td><td>asd</td><td>qwerty</td><td>opiuy</td>
+      </tr>
     </table>
-
   </body>
 </html>
