--- a/index.html
+++ b/index.html
@@ -4,25 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-      .m {
-        width: 35em;
-        background-color: #0d1117;
-        color: #c9d1d9;
-        margin: 0 auto;
-        font-family: Tahoma, Verdana, Arial, sans-serif;
-      }
-      #noeffort {
-        background-color: aqua;
-      }
-      #notfat {
-        width: 35em;
-        margin-left: auto;
-        margin-right: 5%;
-        margin-top: 5%;
-        margin-bottom: 5%;
-      }
-    </style>
+
     <!-- STEP 1: Change the title tag to be Your Name -->
     <title>Josue Q.</title>
 
@@ -32,84 +14,108 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
+        <style>
+          .m {
+            background-color: #0d6efd;
+            color: white;  
+          }
+          #noeffort {
+            background-color: #adb5bd;
+          }
+          #notfat {
+            width: 70%;
+            margin-left: auto;
+            margin-right: auto;
+          }
+    </style>
   </head>
   <body>
 
     <!--STEP 3:  ADD A DARK NAVBAR HERE WITH YOUR NAME IN THE TOP LEFT.  
         Also, create a link in the navbar TO the HTML file that you made in the HTML assessment -->
-    <nav class="navbar navbar-expland-lg bg-dark navbar-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Josue Quintero Martinez</a>
-            <ul class="nav nav-pills">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="https://oda.supah.xyz">HTML Assessment</a>
-                </li>
-              </ul>
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Josue Q.</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link activw" href="https://oda.supah.xyz">HTML Assessment</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Test</a>
+            </li>
+          </ul>
         </div>
-      </nav>
+      </div>
+  </nav>
 
-    <div class="m">
-      <!-- Add a class with custom styling to this div -->
+    <div id="notfat">
+    <h2>I have no idea what to make this website about</h2>
+
+        <!-- STEP 4: CREATE A PHOTO CAROUSEL HERE -->
+    <div id="test" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <!-- <img src="romanesco.jpg" class="d-block w-100" alt="..."> -->
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#test" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#test" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
 
-    <div class="m" id="noeffort">
-      <!-- Add the same class as before to apply the same styling to this div.
-           ALSO add an id to this div to apply something unique. -->
-
-      <!-- There's nothing in the div, what's the point of styling it?-->
+    <div class="container">
+      <div class="row">
+        <div class="col m">
+          <h3>Columned divs</h3>
+          <p>yep</p>
+        </div>
+        <div class="col m" id="noeffort">
+          <h3>Columned divs</h3>
+          <p>does this count as custom styling</p>
+        </div>
+      </div>
     </div>
-
-    <!-- STEP 4: CREATE A PHOTO CAROUSEL HERE -->
-<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="https://images.unsplash.com/photo-1523626752472-b55a628f1acc?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=2e90eae0238ba64cc447f3be7f522c19&auto=format&fit=crop&w=1575&q=80" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="https://images.unsplash.com/photo-1517519014922-8fc06b814a0e?ixlib=rb-0.3.5&s=612f05d638cc31fd235cbfb2d21bcfc0&auto=format&fit=crop&w=1352&q=80" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="https://images.unsplash.com/photo-1517849845537-4d257902454a?ixlib=rb-0.3.5&s=b40cfb86768850f7623bfcfef2a5ba0f&auto=format&fit=crop&w=1575&q=80" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="https://images.unsplash.com/photo-1518020382113-a7e8fc38eac9?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=71d59cd22de21da8d2939bc203617983&auto=format&fit=crop&w=1560&q=80" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="https://images.unsplash.com/photo-1518020382113-a7e8fc38eac9?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=71d59cd22de21da8d2939bc203617983&auto=format&fit=crop&w=1560&q=80" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="https://images.unsplash.com/photo-1517423738875-5ce310acd3da?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=b1523dbf0339fcfcadbe96fe4eb2f8b2&auto=format&fit=crop&w=1410&q=80" class="d-block w-100" alt="...">
-    </div>
-  </div>
-</div>
 
     <!-- STEP 5: ADD Bootstrap styling to the table below so it has striped rows 
          and a header row and add at least three more rows. Feel free to change the text.-->
 
-    <table id="notfat" class="table table-striped">
+    <h3>How to secure an SSH server</h3>
+    <p>edit /etc/ssh/sshd_config and apply the folliwing changes:</p>
+    <table class="table table-striped">
        <thead>
         <tr>
-          <th scope="col">#</th>
-          <th scope="col">A</th>
-          <th scope="col">B</th>
-          <th scope="col">C</th>
+          <th scope="col">commented</th>
+          <th scope="col">option</th>
+          <th scope="col">value</th>
         </tr>
       </thead>
       <tr>
-        <td>1</td><td>asd</td><td>qwerty</td><td>opiuy</td>
+        <td>no</td><td>PermitRootLogin</td><td>no</td>
       </tr>
       <tr>
-        <td>2</td><td>asd</td><td>qwerty</td><td>opiuy</td>
+        <td>no</td><td>PubkeyAuthentication</td><td>yes</td>
       </tr>
       <tr>
-        <td>3</td><td>asd</td><td>qwerty</td><td>opiuy</td>
+        <td>no</td><td>PasswordAuthentication</td><td>no</td>
       </tr>
       <tr>
-        <td>4</td><td>asd</td><td>qwerty</td><td>opiuy</td>
-      </tr>
-      <tr>
-        <td>5</td><td>asd</td><td>qwerty</td><td>opiuy</td>
+        <td>no</td><td>UsePAM</td><td>no</td>
       </tr>
     </table>
+    <p>Then restart the sshd service, making sure pub key is in ~/.ssh/authorized_keys</p>
+    </div>
   </body>
 </html>
